feat: add all info in html file

--- a/index.html
+++ b/index.html
@@ -12,13 +12,53 @@
             <img id="image" src="https://sun9-5.userapi.com/impg/4ZeETBWid7eDTQIF32GVQxL7YvoBp8Mc5aiJrA/sVgUsYy8o5k.jpg?size=960x1280&quality=95&sign=116b6a570e2f64fdc8fb770c591358df&type=album" alt="Me in Charyn Canyon in Kazakhstan">
         </header>
         <main>
-            <section id="Contact Information">
+            <section id="contact_information">
                 <ul>
                     <li>Email: <em>sashka.musatov@gmail.com</em></li>
                     <li>Phone number: +7 (982) 285-66-13</li>
                     <li>Nickname on Discord server RS-school: Alex Musatov (@4lmus)</li>
                     <li>Place of residence: Saint-Petersburg, Russia</li>
                 </ul>
+            </section>
+            <section id="about_me">
+                <p>
+                    I am a student at one of the universities in St. Petersburg. 
+                    I have been studying here for the third year to become an electrical engineer.
+                    Recently I realized that I like the IT sphere more. I am ready to learn something new every day.
+                    During brainstorming sessions, it can be difficult for me to come up with new ideas,
+                    but it is much easier for me to improvise when creating a finished product.
+                </p>
+                <p>
+                    During my studies at the university, I studied the following programming languages: <span class="lang">С++</span>, <span class="lang">python</span>.
+                </p>
+            </section>
+            <section id="code_example">
+                <p>As a code example, I provide a solution to a problem from Codewars.</p>
+                <p>Create a function that takes an integer as an argument and returns “Even” for even numbers or “Odd” for odd numbers.</p>
+                <div id="code">
+                    <p>
+                        function evenOrOdd(number) {
+                            if(Math.abs(number)%2==1) {
+                              return "Odd"
+                            }
+                            else {
+                              return "Even"
+                            }
+                          }
+                    </p>
+                </div>
+            </section>
+            <section id="education">
+                <p>I have no experience in the IT field.</p>
+                <p>
+                    When I was preparing for the course from rs-school, I took the <span class="lang">HTML</span> and <span class="lang">CSS</span> course on freeCodeCamp.
+                    I also started taking a <span class="lang">JavaScript</span> course on the same site.
+                </p>
+                <p>
+                    I studied English at school and at university. Before high school, I actively participated in all-Russian English language Olympiads.
+                    I also participated in outreach programs to improve spoken English from my school whenever possible.
+                    At this point I have forgotten some of the basic features, but I am ready to catch up.
+                </p>
             </section>
         </main>    
     </body>
