fix: add h3 to section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </header>
         <main>
             <section id="contact_information">
+                <h3>Contact Information</h3>
                 <ul>
                     <li>Email: <em>sashka.musatov@gmail.com</em></li>
                     <li>Phone number: +7 (982) 285-66-13</li>
@@ -21,6 +22,7 @@
                 </ul>
             </section>
             <section id="about_me">
+                <h3>About me</h3>
                 <p>
                     I am a student at one of the universities in St. Petersburg. 
                     I have been studying here for the third year to become an electrical engineer.
@@ -33,6 +35,7 @@
                 </p>
             </section>
             <section id="code_example">
+                <h3>Code Example</h3>
                 <p>As a code example, I provide a solution to a problem from Codewars.</p>
                 <p>Create a function that takes an integer as an argument and returns “Even” for even numbers or “Odd” for odd numbers.</p>
                 <div id="code">
